--- a/src/html/components/support.html
+++ b/src/html/components/support.html
@@ -1,15 +1,15 @@
-<section class="support">
+<section class="support" id="support">
   <div class="container">
     <div class="support__head">
-      <h2 class="title title-2 support__head--title">
+      <h2 data-aos="fade-down" class="title title-3 support__head--title">
         Чтобы поддержать Международный васюкинский турнир посетите лекцию на тему:
         <span>«Плодотворная дебютная идея»</span>
       </h2>
-      <h2 class="title title-2 support__head--title-hide">
+      <h2 data-aos="fade-down" class="title title-3 support__head--title-hide">
         Чтобы поддержать Международный васюкинский <br> турнир
       </h2>
       <img src="@img/support-img.jpg" alt="Game" class="support__head--img" />
-      <h2 class="title title-2 support__head--title-hide">
+      <h2 data-aos="fade-down" class="title title-3 support__head--title-hide">
         посетите лекцию на тему: <br />
         <span>«Плодотворная дебютная идея»</span>
       </h2>
@@ -19,7 +19,7 @@
     <div class="support__wrapper">
       <img src="@img/support-poster.png" alt="Poster" class="support__poster" />
       <div class="support__table-container">
-        <h2 class="title title-2 support__table-title">
+        <h2 data-aos="fade-down" class="title title-3 support__table-title">
           и Сеанс <span>одновременной игры в шахматы на 160 досках</span> гроссмейстера О. Бендера
         </h2>
         <div class="support__table">
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        <a href="#" target="_blank" class="support__table-link">
+        <a data-aos="fade-right" href="#" target="_blank" class="support__table-link">
           По всем вопросам обращаться в администрацию к К. Михельсону
         </a>
       </div>
