--- a/src/scss/ui/button.scss
+++ b/src/scss/ui/button.scss
@@ -8,9 +8,7 @@
   font-size: 16px;
   line-height: 130%;
   text-align: center;
-  padding: 14px;
   border-radius: 66px;
-  border: 2px solid var(--black);
   transition:
     background-color 0.2s ease,
     color 0.2s ease;
@@ -20,13 +18,17 @@
   &.btn-primary {
     color: white;
     background-color: var(--black);
+    padding: 16px;
     @include hover {
-      background-color: transparent;
+      background-color: var(--yellow);
+      border-color: var(--yellow);
       color: var(--black);
     }
   }
   &.btn-stroke {
     color: var(--black);
+    padding: 14px;
+    border: 2px solid var(--black);
     @include hover {
       background-color: var(--black);
       color: white;
